cpp/test/FreezeScript/dbmap/fail/17_old.ice
module Test
{

class C {};

struct S
{
    C m1;
};

};
